# EKF

./: .gitignore  CMakeLists.txt  README.md
src/: covariancematrix.cpp  covariancematrix.h  filter.cpp  filter.h  input.cpp  input.h  main.cpp  measurement.cpp  measurement.h  robotefk.cpp  robotefk.h  state.cpp  state.h
src/core/: covariancematrix.cpp  covariancematrix.h  externalTool.h  filter.cpp  filter.h  input.cpp  input.h  jacobianmatrix.cpp  jacobianmatrix.h  matrixmanipulator.cpp  matrixmanipulator.h  measurement.cpp  measurement.h  observationmatrix.cpp  observationmatrix.h  state.cpp  state.h  vectormanipulator.cpp  vectormanipulator.h
